Bug 289303 - iPod nano playlists don't show up in Amarok when not plugged before Amarok starts
Summary: iPod nano playlists don't show up in Amarok when not plugged before Amarok st...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/iPod iPhone (other bugs)
Version First Reported In: 2.4.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks: 289304
  Show dependency treegraph
 
Reported: 2011-12-18 19:08 UTC by bergspitzen.for.ever
Modified: 2012-03-03 15:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bergspitzen.for.ever 2011-12-18 19:08:46 UTC
Version:           2.4.3 (using KDE 4.7.2) 
OS:                Linux

When i plug in my iPod, it don't appears in stored play lists. I have to shut down amarok and start it again that it shows up.

Reproducible: Always

Steps to Reproduce:
Start Amarok an open "stored playlists". Plug in iPod.


Expected Results:  
iPod should show up without restarting of Amarok.
Comment 1 Myriam Schweingruber 2011-12-19 08:32:52 UTC
Which iPod exactly? There are a lot of differences between the models
Comment 2 bergspitzen.for.ever 2011-12-19 10:07:13 UTC
Oh sorry, I 've forgotten to write this.This is the Model: iPod nano
(3. Generation)Thanks

Am 19. Dezember 2011 09:32 schrieb Myriam Schweingruber <myriam@kde.org>:
> https://bugs.kde.org/show_bug.cgi?id=289303
>
>
> Myriam Schweingruber <myriam@kde.org> changed:
>
>           What    |Removed                     |Added
> ----------------------------------------------------------------------------
>             Status|UNCONFIRMED                 |NEEDSINFO
>                 CC|                            |matej@laitl.cz
>         Resolution|                            |WAITINGFORINFO
>
>
>
>
> --- Comment #1 from Myriam Schweingruber <myriam kde org>  2011-12-19 08:32:52 ---
> Which iPod exactly? There are a lot of differences between the models
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
Comment 3 Matěj Laitl 2011-12-19 12:14:00 UTC
Thanks for your report, I can reproduce this, which means it will get fixed, unfortunately it won't make it into Amarok 2.5.

This is a valuable piece of information, by the way, I always knew iPod playlists were erratic in Amarok, but never went to track it down like this.
Comment 4 Matěj Laitl 2012-03-03 15:25:30 UTC
Git commit 3a9b36fe04dafe8c95d5bbdcbb84945e7cf469e6 by Matěj Laitl.
Committed on 03/03/2012 at 15:55.
Pushed by laitl into branch 'master'.

Playlist browser: drag & drop and plugged playlists cleanups

This change fixes a couple of bugs:
 * it is now possible to drop tracks & playlists to playlist providers
   in Saved Playlists
 * When a new empty playlist provider appears or disappears when Amarok is
   running, the view is correctly updated.

FEATURES:
  * "Crop playlist" functionality implemented using drag & drop.

CHANGES:
  * Drag & drop of tracks and playlists to Saved Playlists works in all cases.

BUGFIXES:
  * iPod playlists now appear even when plugged in while Amarok is running.
Related: bug 267729, bug 211811, bug 239950
FIXED-IN: 2.6

M  +3    -0    ChangeLog
M  +19   -16   src/browsers/playlistbrowser/PlaylistBrowserModel.cpp
M  +1    -0    src/browsers/playlistbrowser/PlaylistBrowserModel.h
M  +98   -130  src/browsers/playlistbrowser/PlaylistsByProviderProxy.cpp
M  +2    -11   src/browsers/playlistbrowser/PlaylistsByProviderProxy.h
M  +1    -0    src/core-impl/playlists/providers/user/UserPlaylistProvider.h
M  +2    -0    src/core/playlists/PlaylistProvider.h
M  +12   -4    src/playlistmanager/PlaylistManager.cpp
M  +2    -1    src/playlistmanager/PlaylistManager.h

http://commits.kde.org/amarok/3a9b36fe04dafe8c95d5bbdcbb84945e7cf469e6