src/browsers/playlistbrowser/PlaylistBrowserModel.cpp
@@ -84,6 +84,9 @@ PlaylistBrowserModel::data( const QModelIndex &index, int role ) const
     KIcon icon;
     int playlistCount = 0;
     QList<QAction *> providerActions;
+    QList<Playlists::PlaylistProvider *> providers =
+        The::playlistManager()->getProvidersForPlaylist( playlist );
+    Playlists::PlaylistProvider *provider = providers.count() == 1 ? providers.first() : 0;
 
     switch( index.column() )
     {
@@ -115,9 +118,6 @@ PlaylistBrowserModel::data( const QModelIndex &index, int role ) const
 
         case PlaylistBrowserModel::ProviderColumn: //source
         {
-            QList<Playlists::PlaylistProvider *> providers =
-                    The::playlistManager()->getProvidersForPlaylist( playlist );
-
             if( providers.count() > 1 )
             {
                 QVariantList nameData;
@@ -153,15 +153,8 @@ PlaylistBrowserModel::data( const QModelIndex &index, int role ) const
                     return providerActionsData;
                 }
             }
-            else if( providers.count() )
+            else if( provider )
             {
-                Playlists::PlaylistProvider *provider = providers.first();
-                //prevent crash
-                if( !provider )
-                {
-                    error() << "Invalid PlaylistProvider.";
-                    break;
-                }
                 name = description = provider->prettyName();
                 icon = provider->icon();
                 playlistCount = provider->playlistCount();
@@ -184,7 +177,7 @@ PlaylistBrowserModel::data( const QModelIndex &index, int role ) const
         case Qt::DecorationRole: return QVariant( icon );
         case PlaylistBrowserModel::ByLineRole:
             return i18ncp( "number of playlists from one source",
-                           "One Playlist", "%1 playlists",
+                           "One playlist", "%1 playlists",
                            playlistCount );
         case PlaylistBrowserModel::ActionRole:
             return QVariant::fromValue( index.column() == PlaylistBrowserModel::ProviderColumn ?
@@ -192,6 +185,8 @@ PlaylistBrowserModel::data( const QModelIndex &index, int role ) const
         case PlaylistBrowserModel::ActionCountRole:
             return QVariant( index.column() == PlaylistBrowserModel::ProviderColumn ?
                     providerActions.count() : actionsFor( index ).count() );
+        case PlaylistBrowserModel::ProviderRole:
+            return provider ? QVariant::fromValue<Playlists::PlaylistProvider *>( provider ) : QVariant();
 
         default: return QVariant();
     }
@@ -456,7 +451,8 @@ bool
 PlaylistBrowserModel::dropMimeData( const QMimeData *data, Qt::DropAction action, int row, int column,
                                  const QModelIndex &parent )
 {
-    Q_UNUSED( column );
+    DEBUG_BLOCK
+    debug() << "Dropped on" << parent << "row" << row << "column" << column << "action" << action;
     if( action == Qt::IgnoreAction )
         return true;
 
@@ -470,6 +466,7 @@ PlaylistBrowserModel::dropMimeData( const QMimeData *data, Qt::DropAction action
 
     if( data->hasFormat( AmarokMimeData::PLAYLIST_MIME ) )
     {
+        // TODO: is this ever called????
         Playlists::PlaylistList playlists = amarokMime->playlists();
 
         foreach( Playlists::PlaylistPtr playlist, playlists )
@@ -483,14 +480,20 @@ PlaylistBrowserModel::dropMimeData( const QMimeData *data, Qt::DropAction action
     else if( data->hasFormat( AmarokMimeData::TRACK_MIME ) )
     {
         Meta::TrackList tracks = amarokMime->tracks();
-        if( !parent.isValid() && row == -1 )
+        if( !parent.isValid() && row == -1 && column == -1 )
         {
-            debug() << "Dropped tracks on empty area: create new playlist";
+            debug() << "Dropped tracks on empty area: create new playlist in a default provider";
             The::playlistManager()->save( tracks, Amarok::generatePlaylistName( tracks ) );
+            return true;
+        }
+        else if( !parent.isValid() )
+        {
+            warning() << "Dropped tracks between root items, this is not supported!";
+            return false;
         }
         else
         {
-            debug() << "Dropped track on " << parent << " at row: " << row;
+            debug() << "Dropped tracks on " << parent << " at row: " << row;
 
             Playlists::PlaylistPtr playlist = playlistFromIndex( parent );
             if( !playlist )
